# sumi

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_CN.md  README_TW.md  entitlements.plist  tauri.conf.json  vbx_crossval.json
.github/workflows/: claude-code-review.yml  release.yml
frontend/: package-lock.json  package.json
frontend/src/i18n/: af.json  ar.json  az.json  be.json  bg.json  bs.json  ca.json  cs.json  cy.json  da.json  de.json  el.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gl.json  he.json  hi.json  hr.json  hu.json  hy.json  id.json  is.json  it.json  ja.json  kk.json  kn.json  ko.json  lt.json  lv.json  mi.json  mk.json  mr.json  ms.json  ne.json  nl.json  no.json  (+18 more)
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: CloudConfigPanel.svelte  Modal.svelte
frontend/src/lib/stores/: i18n.svelte.ts  settings.svelte.ts
frontend/src/main/: App.svelte
frontend/src/main/components/: HistoryDetailModal.svelte  SetupOverlay.svelte  Sidebar.svelte
frontend/src/main/components/settings/: BehaviorSection.svelte  HotkeySection.svelte  PolishSection.svelte  StorageSection.svelte  SttSection.svelte
frontend/src/main/pages/: AboutPage.svelte  MeetingPage.svelte  StatsPage.svelte  TestWizard.svelte
frontend/src/overlay/: App.svelte
scripts/: extract_plda.py  gen_vbx_crossval.py  test_vbx.py
src/: audio.rs  audio_devices.rs  audio_import.rs  commands.rs  context_detect.rs  credentials.rs  diarization.rs  history.rs  hotkey.rs  lib.rs  meeting_feeder.rs  meeting_notes.rs  permissions.rs  polisher.rs  qwen3_asr.rs  segment_spacing.rs  settings.rs  stt.rs  transcribe.rs  vbx.rs  whisper_models.rs  whisper_streaming.rs
src/platform/: macos.rs  mod.rs
