[package]
name = "sumi"
version = "0.5.2"
edition = "2021"
description = "Your voice, in writing — AI-powered speech-to-text"
license = "GPL-3.0-or-later"

[features]
default = ["metal"]
metal = ["whisper-rs/metal", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal", "qwen3-asr/metal"]
cuda = ["whisper-rs/cuda", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "qwen3-asr/cuda"]
diarization = ["dep:ort", "dep:ndarray", "dep:rustfft"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
whisper-rs = "0.15"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
qwen3-asr = { version = "0.2.1", default-features = false }
tokenizers = { version = "0.22", features = ["onig"] }
hound = "3"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "pcm", "ogg", "vorbis", "isomp4", "aac"] }
tauri-plugin-dialog = "2"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
unicode-segmentation = "1.12.0"
ort = { version = "=2.0.0-rc.10", optional = true, features = ["ndarray", "coreml"] } # pinned: rc.10 ships bundled static ONNX Runtime; later RCs dropped it, requiring a separate dylib; optional to avoid CRT mismatch on Windows CUDA builds
ndarray = { version = "0.16", optional = true }
rustfft = { version = "6", optional = true }
url = "2"
zhconv = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", features = ["OSX_10_15"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_UI_HiDpi",
] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
